chore: ajuste mensaje de chat
